[package]
name = "kanter"
version = "0.2.7"
authors = ["Lukas Orsvärn <lukas@orsvarn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
bevy = { version = "0.5", default-features = false, features = [
    # "bevy_audio",
    "bevy_dynamic_plugin",
    "bevy_gilrs",
    "bevy_gltf",
    "bevy_wgpu",
    "bevy_winit",
    "render",
    "png",
    "hdr",
    # "mp3",
    "x11",
]}
kanter_core = { git = "https://github.com/lukors/kanter_core", tag = "v0.9.2" }
native-dialog = "0.5.5"
image = "0.20.1"
rand = "0.8.3"
num_enum = "0.5.1"
