[package]
name = "kanter"
version = "0.2.9"
authors = ["Lukas Orsvärn <lukas@orsvarn.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
bevy = { version = "0.6.0", default-features = false, features = [
    # "bevy_audio",
    "bevy_gilrs",
    "bevy_winit",
    "render",
    "png",
    "hdr",
    "vorbis",
    "x11",
    "filesystem_watcher",
]}
image = "0.20.1"
# kanter_core = { git = "https://github.com/lukors/kanter_core", tag = "v0.9.2" }
kanter_core = { path = "../kanter_core" }
native-dialog = "0.5.5"
num_enum = "0.5.1"
rand = "0.8.3"
