[package]
name = "vismut"
version = "0.2.11"
authors = ["Lukas Orsvärn <lukas@orsvarn.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow = "1.0.44"
bevy = { version = "0.6.0", default-features = false, features = [
    # "bevy_audio",
    # "bevy_gilrs",
    "bevy_winit",
    "render",
    "png",
    # "hdr",
    # "vorbis",
    "x11",
    "filesystem_watcher",
]}
image = "0.20.1"
vismut_core = { git = "https://github.com/lukors/kanter_core", tag = "v0.10.0" }
native-dialog = "0.5.5"
num_enum = "0.5.1"
rand = "0.8.3"
